feat: add security features and user profile editing
- Add `cryptography` and `qrcode` dependencies
- Enable user registration and login
- Implement user profile editing functionality
- Update user model to include first name and last name fields
- Update profile template to display user's first name and last name

--- a/src/templates/docdb/base.html
+++ b/src/templates/docdb/base.html
@@ -3,8 +3,7 @@
     ENRG DocDB
 {% endblock title %}
 {% block nav %}
+    {{ render_nav_item('index.index', _fsdomain('Home') ) }}
+    {{ render_nav_item('user.profile', _fsdomain('Profile') ) }}
     {{ super() }}
-    <ul class="navbar-nav">
-        {% if user.is_authenticated %}{{ render_nav_item('security.logout', _fsdomain('Logout') ) }}{% endif %}
-    </ul>
 {% endblock nav %}
