--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,3 +1,4 @@
+{% from 'bootstrap5/nav.html' import render_nav_item %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -7,6 +8,11 @@
         <meta name="description" content="EnrgDocDB" />
         <meta name="keywords" content="ENRG, DocDB, Database" />
         {{ bootstrap.load_css() }} {{ bootstrap.load_js() }}
+        <link rel="stylesheet"
+              href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+              integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+              crossorigin="anonymous"
+              referrerpolicy="no-referrer" />
         <title>
             {% block title %}
             {% endblock title %}
@@ -17,12 +23,18 @@
     <body>
         <div class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
             <div class="container">
-                {% block nav %}
-                    <a class="navbar-brand" href="{{ url_for("index.index") }}">EnrgDocDB</a>
-                {% endblock nav %}
+                {% block nav_brand %}
+                    <a class="navbar-brand" href="{{ url_for("index.index") }}">ENRG DocDB</a>
+                {% endblock nav_brand %}
+                <ul class="navbar-nav">
+                    {% block nav %}
+                        {% if current_user.is_authenticated %}{{ render_nav_item('security.logout', _fsdomain('Sign out') ) }}{% endif %}
+                    {% endblock nav %}
+                </ul>
             </div>
         </div>
-        <div class="container mt-2">
+        <div class="container mt-2 mb-2">
+            {% include "messages.html" %}
             {% block content %}
             {% endblock content %}
         </div>
