--- a/src/templates/docdb/index.html
+++ b/src/templates/docdb/index.html
@@ -1,5 +1,20 @@
 {% extends "docdb/base.html" %}
-{% from 'bootstrap4/nav.html' import render_nav_item %}
 {% block content %}
-    <h1>Hello, {{ user.email }}!</h1>
+    <div class="input-group mb-3 w-100">
+        <input type="text"
+               class="form-control"
+               placeholder="{{ _fsdomain("Search for Document") }}"
+               aria-label="Search"
+               aria-describedby="button-addon2">
+        <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="button" id="button-addon2">
+                <i class="fas fa-search"></i>
+            </button>
+        </div>
+    </div>
+    {% if current_user.first_name %}
+        <h2>Welcome, {{ current_user.first_name }} {{ current_user.last_name }}</h2>
+    {% else %}
+        <h2>Welcome, {{ current_user.email }}</h2>
+    {% endif %}
 {% endblock content %}
