--- a/src/templates/security/register_user.html
+++ b/src/templates/security/register_user.html
@@ -2,7 +2,6 @@
 {% from "bootstrap5/form.html" import render_field %}
 {% from "security/_macros.html" import render_field_with_errors, render_form_errors, render_field_errors %}
 {% block content %}
-    {% include "security/_messages.html" %}
     <h1>{{ _fsdomain("Register") }}</h1>
     <form action="{{ url_for_security("register") }}"
           method="post"
@@ -12,9 +11,7 @@
         {{ render_field(register_user_form.email) }}
         {% if config["SECURITY_USERNAME_ENABLE"] %}{{ render_field(register_user_form.username) }}{% endif %}
         {{ render_field(register_user_form.password) }}
-        {% if register_user_form.password_confirm %}
-            {{ render_field(register_user_form.password_confirm) }}
-        {% endif %}
+        {% if register_user_form.password_confirm %}{{ render_field(register_user_form.password_confirm) }}{% endif %}
         {{ render_field_errors(register_user_form.csrf_token) }}
         {{ render_field(register_user_form.submit) }}
     </form>
