--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -20,7 +20,7 @@
         {% block head %}
         {% endblock head %}
     </head>
-    <body>
+    <body class="d-flex flex-column min-vh-100">
         <div class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
             <div class="container">
                 {% block nav_brand %}
@@ -38,5 +38,8 @@
             {% block content %}
             {% endblock content %}
         </div>
+        <footer class="bg-light text-center text-lg-start mt-auto">
+            <div class="text-center p-3 bg-dark text-white">2024 - ENRG DocDB</div>
+        </footer>
     </body>
 </html>
