--- a/src/templates/docdb/base.html
+++ b/src/templates/docdb/base.html
@@ -5,5 +5,6 @@
 {% block nav %}
     {{ render_nav_item('index.index', _fsdomain('Home') ) }}
     {{ render_nav_item('user.profile', _fsdomain('Profile') ) }}
+    <div class="flex-grow-1 pe-4 ps-4" data-bs-theme="light">{% include "docdb/snippets/search_form.html" %}</div>
     {{ super() }}
 {% endblock nav %}
