--- a/src/templates/docdb/quick_search.html
+++ b/src/templates/docdb/quick_search.html
@@ -1,6 +1,6 @@
 {% extends "docdb/base.html" %}
 {% block content %}
-    <h1>Search Results</h1>
+    <h2>Search Results ({{ documents | length }})</h2>
     {% if documents %}
         <ul>
             {% for result in documents %}<li>{{ result.title }} - {{ result.document_type.name }}</li>{% endfor %}
