--- a/src/templates/docdb/snippets/search_form.html
+++ b/src/templates/docdb/snippets/search_form.html
@@ -1,8 +1,8 @@
-<form action="{{ url_for("document.quick_search") }}" method="get">
+<form action="{{ url_for("search.index") }}" method="get">
     <div class="input-group w-100">
         <input type="text"
                class="form-control"
-               placeholder="{{ _fsdomain("Search for Document") }}"
+               placeholder="{{ _fsdomain("Search for Document, Author, Topic, or User") }}"
                name="query"
                value="{{ search_query }}">
         <div class="input-group-append">
