--- a/src/templates/docdb/snippets/document.html
+++ b/src/templates/docdb/snippets/document.html
@@ -30,21 +30,23 @@
                     <td>
                         <a href="{{ url_for("document.view", document_id=document.id) }}">{{ document.title }}</a>
                     </td>
-                    <td>
-                        {% for author in document.authors %}
-                            {{ author.name }}
-                            {% if not loop.last %},{% endif %}
-                        {% endfor %}
-                    </td>
-                    <td>
-                        {% for topic in document.topics %}
-                            {{ topic.name }}
-                            {% if not loop.last %},{% endif %}
-                        {% endfor %}
-                    </td>
+                    <td>{{ render_document_authors(document.authors) }}</td>
+                    <td>{{ render_document_topics(document.topics) }}</td>
                     <td>{{ document.modified_at.strftime("%Y-%m-%d %H:%M:%S") }}</td>
                 </tr>
             {% endfor %}
         </tbody>
     </table>
+{% endmacro %}
+{% macro render_document_authors(authors) %}
+    {% for doc_author in authors %}
+        <a href="">{{ doc_author.author.first_name }} {{ doc_author.author.last_name }}</a>
+        {% if not loop.last %},{% endif %}
+    {% endfor %}
+{% endmacro %}
+{% macro render_document_topics(topics) %}
+    {% for doc_topic in topics %}
+        <a href="">{{ doc_topic.topic.name }}</a>
+        {% if not loop.last %},{% endif %}
+    {% endfor %}
 {% endmacro %}
