--- a/src/templates/docdb/snippets/document.html
+++ b/src/templates/docdb/snippets/document.html
@@ -3,7 +3,7 @@
         <thead>
             <tr>
                 <th style="min-width: 200px;">
-                    <i class="fas fa-file-pdf"></i> Document
+                    <i class="fas fa-file"></i> Document
                 </th>
                 <th>
                     <i class="fas fa-user"></i> Author(s)
