--- a/src/templates/docdb/snippets/file.html
+++ b/src/templates/docdb/snippets/file.html
@@ -2,8 +2,11 @@
     <table class="table table-striped table-hover">
         <thead>
             <tr>
-                <th style="min-width: 200px;">
+                <th>
                     <i class="fas fa-file"></i> File
+                </th>
+                <th>
+                    <i class="fas fa-file"></i> Document
                 </th>
                 <th>
                     <i class="fas fa-calendar-alt"></i> Date Uploaded
@@ -13,7 +16,7 @@
         <tbody>
             {% if not files %}
                 <tr>
-                    <td colspan="2">
+                    <td colspan="3">
                         <i class="fas fa-info-circle"></i>
                         No files found.
                     </td>
@@ -22,7 +25,11 @@
             {% for file in files %}
                 <tr>
                     <td>
-                        <a href="{{ url_for('document.download_file', file_id=file.id) }}">{{ file.file_name }}</a>
+                        <a href="{{ url_for('document.download_file', file_id=file.id) }}"
+                           target="_blank">{{ file.file_name }}</a>
+                    </td>
+                    <td>
+                        <a href="{{ url_for('document.view', document_id=file.document_id) }}">{{ file.document.title }}</a>
                     </td>
                     <td>{{ file.created_at.strftime("%Y-%m-%d %H:%M:%S") }}</td>
                 </tr>
