--- a/src/templates/docdb/snippets/file.html
+++ b/src/templates/docdb/snippets/file.html
@@ -1,3 +1,29 @@
+{% macro render_file(file) %}
+    <div class="d-inline-flex align-items-center gap-1">
+        <span class="badge bg-primary">
+            {% if file.file_name.endswith(".pdf") %}
+                <i class="fas fa-file-pdf"></i>
+            {% elif file.file_name.endswith(".docx") %}
+                <i class="fas fa-file-word"></i>
+            {% elif file.file_name.endswith(".pptx") %}
+                <i class="fas fa-file-powerpoint"></i>
+            {% elif file.file_name.endswith(".xlsx") %}
+                <i class="fas fa-file-excel"></i>
+            {% elif file.file_name.endswith(".zip") %}
+                <i class="fas fa-file-archive"></i>
+            {% else %}
+                <i class="fas fa-file"></i>
+            {% endif %}
+        </span>
+        <a href="{{ url_for("document.download_file", file_id=file.id) }}"
+           target="_blank">{{ file.file_name }}</a>
+    </div>
+{% endmacro %}
+{% macro render_files(files) %}
+    <div class="d-inline-flex align-items-center gap-2">
+        {% for file in files %}{{ render_file(file) }}{% endfor %}
+    </div>
+{% endmacro %}
 {% macro render_file_table(files) %}
     <table class="table table-striped table-hover">
         <thead>
@@ -24,10 +50,7 @@
             {% endif %}
             {% for file in files %}
                 <tr>
-                    <td>
-                        <a href="{{ url_for('document.download_file', file_id=file.id) }}"
-                           target="_blank">{{ file.file_name }}</a>
-                    </td>
+                    <td>{{ render_file(file) }}</td>
                     <td>
                         <a href="{{ url_for('document.view', document_id=file.document_id) }}">{{ file.document.title }}</a>
                     </td>
