--- a/src/templates/docdb/snippets/user.html
+++ b/src/templates/docdb/snippets/user.html
@@ -1,3 +1,15 @@
+{% macro render_user(user) %}
+    <div class="d-inline-flex align-items-center gap-2">
+        <i class="fas fa-user"></i>
+        <a href="">
+            {% if user.first_name %}
+                {{ user.first_name }} {{ user.last_name }}
+            {% else %}
+                {{ user.email }}
+            {% endif %}
+        </a>
+    </div>
+{% endmacro %}
 {% macro render_user_table(users) %}
     <table class="table table-striped table-hover">
         <thead>
@@ -22,9 +34,7 @@
             {% endif %}
             {% for user in users %}
                 <tr>
-                    <td>
-                        <a href="">{{ user.first_name }} {{ user.last_name }}</a>
-                    </td>
+                    <td>{{ render_user(user) }}</td>
                     <td>{{ user.email }}</td>
                     <td>{{ user.create_datetime.strftime("%Y-%m-%d %H:%M:%S") }}</td>
                 </tr>
