feat: pagination for all tables and a bunch of refactoring

--- a/src/templates/docdb/base.html
+++ b/src/templates/docdb/base.html
@@ -5,6 +5,6 @@
 {% block nav %}
     {{ render_nav_item('index.index', _fsdomain('Home') ) }}
     <div class="flex-grow-1 pe-4 ps-4" data-bs-theme="light">{% include "docdb/snippets/search_form.html" %}</div>
-    {{ render_nav_item('user.profile', _fsdomain('Profile') ) }}
+    {{ render_nav_item('user.your_account', _fsdomain('Your Account') ) }}
     {{ super() }}
 {% endblock nav %}
