--- a/src/templates/docdb/quick_search.html
+++ b/src/templates/docdb/quick_search.html
@@ -1,36 +1,24 @@
 {% extends "docdb/base.html" %}
-{% from "docdb/snippets/document.html" import render_document_table %}
-{% from "docdb/snippets/author.html" import render_author_table %}
-{% from "docdb/snippets/topic.html" import render_topic_table %}
-{% from "docdb/snippets/user.html" import render_user_table %}
-{% from "docdb/snippets/file.html" import render_file_table %}
 {% from "docdb/snippets/mark.html" import mark %}
+{% from "docdb/snippets/render_map.html" import render_paginated_result %}
 {% block title %}
     Quick Search - ENRG DocDB
 {% endblock title %}
 {% block content %}
     {{ mark('td', query) }}
     <h2>Search Results</h2>
-    <p class="text-muted">Found {{ result.result_count }} result(s) in {{ result.time_taken }} seconds.</p>
+    <p class="text-muted">Found {{ search.result_count }} result(s) in {{ search.time_taken }} seconds.</p>
     <hr>
-    {% if result.result_count == 0 %}
+    {% if search.result_count == 0 %}
         <p>No results found.</p>
     {% else %}
-        {% set result_to_render_func_map = {
-                    "documents": render_document_table,
-                    "authors": render_author_table,
-                    "topics": render_topic_table,
-                    "users": render_user_table,
-                    "files": render_file_table
-                } %}
-        {% for result_type, render_func in result_to_render_func_map.items() %}
-            {% set result_list = result[result_type] %}
+        {% for result_type, result_list in search.result.items() %}
             {% if result_list %}
                 <div class="d-flex align-items-end gap-2 mb-2">
                     <h3 class="m-0">{{ result_type | capitalize }}</h3>
-                    <strong>({{ result_list | length }})</strong>
+                    <strong>({{ result_list.result | length }})</strong>
                 </div>
-                {{ render_func(result_list) }}
+                {{ render_paginated_result(result_list) }}
             {% endif %}
         {% endfor %}
     {% endif %}
