--- a/src/templates/docdb/snippets/author.html
+++ b/src/templates/docdb/snippets/author.html
@@ -1,4 +1,8 @@
-{% macro render_author_table(authors) %}
+{% from "docdb/snippets/pagination.html" import render_pagination %}
+{% macro render_author(author) %}
+    <a href="{{ url_for('author.view', author_id=author.id) }}">{{ author.name }}</a>
+{% endmacro %}
+{% macro render_author_table(authors, paginated_query) %}
     <table class="table table-striped table-hover">
         <thead>
             <tr>
@@ -21,12 +25,11 @@
             {% endif %}
             {% for author in authors %}
                 <tr>
-                    <td>
-                        <a href="">{{ author.first_name }} {{ author.last_name }}</a>
-                    </td>
+                    <td>{{ render_author(author) }}</td>
                     <td>{{ author.created_at.strftime("%Y-%m-%d %H:%M:%S") }}</td>
                 </tr>
             {% endfor %}
         </tbody>
     </table>
+    {{ render_pagination(paginated_query) }}
 {% endmacro %}
