--- a/src/templates/docdb/snippets/file.html
+++ b/src/templates/docdb/snippets/file.html
@@ -1,3 +1,4 @@
+{% from "docdb/snippets/pagination.html" import render_pagination %}
 {% macro render_file(file) %}
     <div class="d-inline-flex align-items-center gap-1">
         <span class="badge bg-primary">
@@ -24,7 +25,7 @@
         {% for file in files %}{{ render_file(file) }}{% endfor %}
     </div>
 {% endmacro %}
-{% macro render_file_table(files) %}
+{% macro render_file_table(files, paginated_query) %}
     <table class="table table-striped table-hover">
         <thead>
             <tr>
@@ -57,6 +58,7 @@
                     <td>{{ file.created_at.strftime("%Y-%m-%d %H:%M:%S") }}</td>
                 </tr>
             {% endfor %}
+            {{ render_pagination(paginated_query) }}
         </tbody>
     </table>
 {% endmacro %}
