--- a/src/templates/docdb/snippets/topic.html
+++ b/src/templates/docdb/snippets/topic.html
@@ -1,4 +1,6 @@
-{% macro render_topic_table(topics) %}
+{% from "docdb/snippets/pagination.html" import render_pagination %}
+{% macro render_topic_table(topics, paginated_query) %}
+    {% from "docdb/snippets/pagination.html" import render_pagination %}
     <table class="table table-striped table-hover">
         <thead>
             <tr>
@@ -27,6 +29,7 @@
                     <td>{{ topic.created_at.strftime("%Y-%m-%d %H:%M:%S") }}</td>
                 </tr>
             {% endfor %}
+            {{ render_pagination(paginated_query) }}
         </tbody>
     </table>
 {% endmacro %}
