--- a/src/templates/docdb/snippets/user.html
+++ b/src/templates/docdb/snippets/user.html
@@ -1,16 +1,11 @@
+{% from "docdb/snippets/pagination.html" import render_pagination %}
 {% macro render_user(user) %}
     <div class="d-inline-flex align-items-center gap-2">
         <i class="fas fa-user"></i>
-        <a href="">
-            {% if user.first_name %}
-                {{ user.first_name }} {{ user.last_name }}
-            {% else %}
-                {{ user.email }}
-            {% endif %}
-        </a>
+        <a href="{{ url_for('user.view', user_id=user.id) }}">{{ user.name }}</a>
     </div>
 {% endmacro %}
-{% macro render_user_table(users) %}
+{% macro render_user_table(users, paginated_query) %}
     <table class="table table-striped table-hover">
         <thead>
             <tr>
@@ -41,4 +36,5 @@
             {% endfor %}
         </tbody>
     </table>
+    {{ render_pagination(paginated_query) }}
 {% endmacro %}
