--- a/src/templates/docdb/snippets/render_map.html
+++ b/src/templates/docdb/snippets/render_map.html
@@ -1,3 +1,4 @@
+{% from "docdb/snippets/pagination.html" import render_pagination %}
 {% from "docdb/snippets/document.html" import render_document_table %}
 {% from "docdb/snippets/author.html" import render_author_table %}
 {% from "docdb/snippets/topic.html" import render_topic_table %}
@@ -10,7 +11,13 @@
     "User": render_user_table,
     "DocumentFile": render_file_table
 } %}
+{% set model_name_override_map = {"DocumentFile": "File"} %}
 {% macro render_paginated_result(paginated) %}
     {% set render_func = render_func_map[paginated.query_model] %}
     {{ render_func(paginated.result, paginated) }}
+    {{ render_pagination(paginated) }}
+{% endmacro %}
+{% macro get_readable_model_name(model_name) %}
+    {% set readable_model_name = model_name_override_map.get(model_name, model_name) %}
+    {{- readable_model_name -}}
 {% endmacro %}
