--- a/src/templates/docdb/snippets/search_form.html
+++ b/src/templates/docdb/snippets/search_form.html
@@ -4,7 +4,7 @@
                class="form-control"
                placeholder="{{ _fsdomain("Search for Document, Author, Topic, File, or User") }}"
                name="query"
-               value="{{ search_query }}">
+               value="{{ query }}">
         <div class="input-group-append">
             <button class="btn btn-outline-secondary" type="submit">
                 <i class="fas fa-search"></i>
