fix: fix broken link on index view

--- a/src/templates/docdb/index.html
+++ b/src/templates/docdb/index.html
@@ -10,7 +10,7 @@
                 <h2>Welcome, {{ current_user.email }}</h2>
                 <h5 class="text-muted mb-0">
                     <i class="fas fa-info-circle"></i>
-                    You can set your name using the <a href="{{ url_for("user.profile") }}">Profile</a> page.
+                    You can set your name using the <a href="{{ url_for("user.your_account") }}">Your Account</a> page.
                 </h5>
             {% endif %}
         </div>
