--- a/src/templates/docdb/view_topic.html
+++ b/src/templates/docdb/view_topic.html
@@ -1,5 +1,5 @@
 {% extends "docdb/base.html" %}
-{% from "docdb/snippets/document.html" import render_document_table %}
+{% from "docdb/snippets/render_map.html" import render_paginated_result %}
 {% block title %}
     {{ topic.name }} - ENRG DocDB
 {% endblock title %}
@@ -9,5 +9,5 @@
         Below are the documents related to <strong class="text-primary">{{ topic.name }}</strong>.
     </p>
     <hr>
-    {{ render_document_table(documents) }}
+    {{ render_paginated_result(documents) }}
 {% endblock content %}
