--- a/src/templates/docdb/view_document.html
+++ b/src/templates/docdb/view_document.html
@@ -8,6 +8,13 @@
 {% block content %}
     <h2>Document Details</h2>
     <hr>
+    <div class="mb-2">
+        <a href="{{ url_for('admin_Document.edit_view', id=document.id, url=request.path) }}"
+           class="btn btn-primary">
+            <i class="fas fa-edit"></i>
+            Edit Document
+        </a>
+    </div>
     <div class="document-details">
         <table class="table table-striped table-bordered">
             <tr>
