--- a/src/templates/docdb/snippets/author.html
+++ b/src/templates/docdb/snippets/author.html
@@ -32,3 +32,36 @@
         </tbody>
     </table>
 {% endmacro %}
+{% macro render_institution(institution) %}
+    <a href="">{{ institution.name }}</a>
+{% endmacro %}
+{% macro render_institution_table(institutions, paginated_query) %}
+    <table class="table table-striped table-hover">
+        <thead>
+            <tr>
+                <th style="min-width: 200px;">
+                    <i class="fas fa-university"></i> Institution
+                </th>
+                <th>
+                    <i class="fas fa-calendar-alt"></i> Date Registered
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            {% if not institutions %}
+                <tr>
+                    <td colspan="2">
+                        <i class="fas fa-info-circle"></i>
+                        No institutions found.
+                    </td>
+                </tr>
+            {% endif %}
+            {% for institution in institutions %}
+                <tr>
+                    <td>{{ render_institution(institution) }}</td>
+                    <td>{{ institution.created_at.strftime("%Y-%m-%d %H:%M:%S") }}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+{% endmacro %}
