--- a/src/templates/docdb/snippets/author.html
+++ b/src/templates/docdb/snippets/author.html
@@ -65,3 +65,9 @@
         </tbody>
     </table>
 {% endmacro %}
+{% macro render_authors(authors) %}
+    {% for author in authors %}
+        {{ render_author(author) }}
+        {% if not loop.last %},{% endif %}
+    {% endfor %}
+{% endmacro %}
