--- a/src/templates/docdb/snippets/document.html
+++ b/src/templates/docdb/snippets/document.html
@@ -1,5 +1,7 @@
 {% from "docdb/snippets/author.html" import render_author %}
 {% from "docdb/snippets/pagination.html" import render_pagination %}
+{% from "docdb/snippets/topic.html" import render_topics %}
+{% from "docdb/snippets/author.html" import render_authors %}
 {% macro render_document_table(documents, paginated_query) %}
     <table class="table table-striped table-hover">
         <thead>
@@ -32,8 +34,8 @@
                     <td>
                         <a href="{{ url_for("document.view", document_id=document.id) }}">{{ document.title }}</a>
                     </td>
-                    <td>{{ render_document_authors(document.authors) }}</td>
-                    <td>{{ render_document_topics(document.topics) }}</td>
+                    <td>{{ render_authors(document.authors) }}</td>
+                    <td>{{ render_topics(document.topics) }}</td>
                     <td>{{ document.modified_at.strftime("%Y-%m-%d %H:%M:%S") }}</td>
                 </tr>
             {% endfor %}
@@ -63,18 +65,6 @@
             {% endfor %}
         </tbody>
     </table>
-{% endmacro %}
-{% macro render_document_authors(authors) %}
-    {% for doc_author in authors %}
-        {{ render_author(doc_author) }}
-        {% if not loop.last %},{% endif %}
-    {% endfor %}
-{% endmacro %}
-{% macro render_document_topics(topics) %}
-    {% for doc_topic in topics %}
-        <a href="{{ url_for('topic.view', topic_id=doc_topic.id) }}">{{ doc_topic.name }}</a>
-        {% if not loop.last %},{% endif %}
-    {% endfor %}
 {% endmacro %}
 {% macro render_document_type(document_type) %}
     <a href="{{ url_for('document.view_document_type', document_type_id=document_type.id) }}">{{ document_type.name }}</a>
