feat: moderation options for most models

--- a/src/templates/docdb/snippets/search_form.html
+++ b/src/templates/docdb/snippets/search_form.html
@@ -2,7 +2,7 @@
     <div class="input-group w-100">
         <input type="text"
                class="form-control"
-               placeholder="{{ _fsdomain("Search for Document, Author, Topic, File, or User") }}"
+               placeholder="{{ _fsdomain("Search for anything!") }}"
                name="query"
                value="{{ query }}">
         <div class="input-group-append">
