feat: reset migrations, add organization & roles

--- a/src/templates/docdb/index.html
+++ b/src/templates/docdb/index.html
@@ -25,7 +25,7 @@
     </div>
     <hr>
     <div>
-        See also:
+        <strong>Below are the models you can list</strong>
         <ul>
             {% for model_name in view_all_allowed_models %}
                 <li>
