--- a/src/templates/docdb/snippets/user.html
+++ b/src/templates/docdb/snippets/user.html
@@ -37,3 +37,82 @@
         </tbody>
     </table>
 {% endmacro %}
+{% macro render_role_table(roles) %}
+    <table class="table table-striped table-hover">
+        <thead>
+            <tr>
+                <th style="min-width: 200px;">
+                    <i class="fas fa-user"></i> Role
+                </th>
+                <th>
+                    <i class="fas fa-university"></i>
+                    Organization
+                </th>
+                <th>
+                    <i class="fas fa-calendar-alt"></i>
+                    Permissions
+                </th>
+                <th>
+                    <i class="fas fa-calendar-alt"></i> Date Modified
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            {% if not roles %}
+                <tr>
+                    <td colspan="2">
+                        <i class="fas fa-info-circle"></i>
+                        No roles found.
+                    </td>
+                </tr>
+            {% endif %}
+            {% for role in roles %}
+                <tr>
+                    <td>{{ role.name }}</td>
+                    <td>{{ role.description }}</td>
+                    <td>
+                        <ul class="ps-1">
+                            {% for permission in role.permissions %}
+                                <strong>{{- permission -}}</strong>
+                                {%- if not loop.last -%},{% endif %}
+                            {% endfor %}
+                        </ul>
+                    </td>
+                    <td>{{ role.update_datetime.strftime("%Y-%m-%d %H:%M:%S") }}</td>
+                {% endfor %}
+            </tr>
+        </tbody>
+    </table>
+{% endmacro %}
+{% macro render_organization_table(organizations, paginated_query) %}
+    <table class="table table-striped table-hover">
+        <thead>
+            <tr>
+                <th style="min-width: 200px;">
+                    <i class="fas fa-university"></i> Organization
+                </th>
+                <th>
+                    <i class="fas fa-calendar-alt"></i> Date Registered
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            {% if not organizations %}
+                <tr>
+                    <td colspan="2">
+                        <i class="fas fa-info-circle"></i>
+                        No organizations found.
+                    </td>
+                </tr>
+            {% endif %}
+            {% for organization in organizations %}
+                <tr>
+                    <td>
+                        <a href="{{ url_for('admin_Organization.edit_view', id=organization.id) }}">{{ organization.name }}</a>
+                        <td>{{ organization.created_at.strftime("%Y-%m-%d %H:%M:%S") }}</td>
+                    </td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+{% endmacro %}
