--- a/src/templates/docdb/view_user.html
+++ b/src/templates/docdb/view_user.html
@@ -1,10 +1,12 @@
 {% extends "docdb/base.html" %}
+{% from "docdb/snippets/moderation.html" import render_moderation_options %}
 {% from "docdb/snippets/render_map.html" import render_paginated_result %}
 {% block title %}
     {{ user.name }} - ENRG DocDB
 {% endblock title %}
 {% block content %}
     <h2>View User</h2>
+    {{ render_moderation_options(user) }}
     <hr>
     <div class="user-details">
         <table class="table table-striped table-bordered">
